src/objects/Win_User_Region__c.object
<CustomObject>
    <fields>
        <fullName>Country_Id__c</fullName>
        <label>Country Id</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Id__c</fullName>
        <externalId>true</externalId>
        <label>Region Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Email__c</fullName>
        <label>Sales Rep Email</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Id__c</fullName>
        <label>Sales Rep Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Name__c</fullName>
        <label>Sales Rep Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wings User Region</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country_Id__c</columns>
        <columns>Region_Id__c</columns>
        <columns>Sales_Rep_Id__c</columns>
        <columns>Sales_Rep_Name__c</columns>
        <columns>Sales_Rep_Email__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UC-{0000}</displayFormat>
        <label>User Region Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wings User Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>